src/test/ui/error-codes/E0264.stderr
error[E0264]: unknown external lang item: `cake`
  --> $DIR/E0264.rs:5:5
   |
LL |     fn cake();
   |     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0264`.
